Revert "Fix overflow global"
This reverts commit e93f6663cfc9cf4224f418b81f4263bf5b53fbab.

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@
 }
 
 body {
-  overflow-x: hidden !important;
   padding: 0;
   margin: 0;
   font-family: "Poppins", sans-serifs !important;
@@ -21,17 +20,22 @@ body {
 }
 
 .content {
+  overflow: hidden;
+  position: relative;
+  height: 100vh !important;
   width: 100% !important;
   margin: 0;
   padding: 0;
-  display: none;
+  z-index: -1;
 }
 
 .content-fade {
+  display: block;
   animation-name: fade-in;
   animation-duration: 4s;
   animation-fill-mode: forwards;
-  overflow: hidden !important;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 @keyframes fade-in {
   0% {
@@ -44,7 +48,7 @@ body {
 
 .loading {
   position: relative;
-  height: 100vh !important;
+  height: 100% !important;
   width: 100% !important;
   background: radial-gradient(50% 50% at 50% 50%, #FFFFFF 0%, #F3F8FA 100%);
   z-index: 2;
